kubernetes/apps/media/streamystats/networkpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: streamystats-egress-internal
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/name: streamystats
    egress:
      - toEndpoints:
          - matchLabels:
              app.kubernetes.io/name: jellyfin
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/name: jellyfin
    egress:
      - toEndpoints:
          - matchLabels:
              app.kubernetes.io/name: streamystats
